@@ -16,6 +16,7 @@ DATE xx/xx/2009
 NEWS:
 
 NEW: [features/improvements]
++Find bar is now customizable via right click menu.
 +Add Hungarian, Romanian, and Slovak translations.
 
 BUG FIXES:
